Fix spacing between div

--- a/app/assets/stylesheets/root_page.css
+++ b/app/assets/stylesheets/root_page.css
@@ -73,8 +73,8 @@ body, html {
   word-wrap: break-word;
 }
 
-.gem-description {
-  /*word-wrap: break-word;*/
+.gem-information {
+  padding-bottom: 30px;
 }
 
 .request-output {
